* Fixed an issue where the python pix2radec and radec2pix commands failed with coords outside the image (!887)
* Fixed an issue that meant the pyscript command was not waiting for the python interpreter to exit (#1660)
* Fixed an issue with some commands e.g. denoise that meant they would always indicate failure in a script (#1661)

**Improvements**
* Removed legacy GraXpert interface to be replaced by the new GraXpert-AI.py script (#1620, #1611, #1573)

siril 1.4.0-beta2
05/21/25

**Fixes:**
* Fixed option -weight= for stack command and add filtering criteria in HISTORY key of stacked image (#1545)
* Fixed crash and slowness when refreshing the scripts list (#1548, #1574)
* Python scripts are now sorted alphabetically (#1559)
* Fixed crash in Noise Reduction with Independent Channels option selected (#1567)
* Fixed UI hang when manually refreshing scripts or SPCC (#1566)
* Fixed incorrect behaviour when using set_image_pixeldata to chage the number of channels (#1570)
* Fixed incorrect siril command return values (#1569)
* Fixed crash in astrometric registration when the reference image could not be platesolved (#1557)
* Fixed preventing max framing export in seqapplyreg with FITSEQ or SER (#1561)
* Fixed obscode that was not exported in the AAVSO csv (#1577)
* Removed graxpert_deconv from the command line (#1575)
* Fixed SPCC failing to open files on Windows when the filepath contains non-ASCII characters (e.g., accented characters) (#1584)
* Fixed parameter parsing in PixelMath (#1594)
* Fixed bad font kerning on macOS (#1508)
* Fixed crash on Windows language change (#1560)
* Fixed incorrect option handling in denoise (#1599)
* Fixed poor star detection when input sequence was in 16b and preferences set in 32b (#1614)
* Fixed incorrect image size with latest cameras added to LibRaw, Siril now uses 202502 snapshot (#1565)
* Fixed metadata filling problem in PixelMath using $T (#1605)
* Fixed crash in Image Plate Solver (#1609)